--- a/Python Absolute Beginner/Module_1.0_Tutorials_START_HERE.ipynb
+++ b/Python Absolute Beginner/Module_1.0_Tutorials_START_HERE.ipynb
@@ -4314,7 +4314,8 @@
    "outputs": [],
    "source": [
     "# add to menu\n",
-    "menu = \"salad, pasta, sandwich, pizza, drinks, dessert, calzone, donut, pretzel\"\n"
+    "menu = \"salad, pasta, sandwich, pizza, drinks, dessert, calzone, donut, pretzel\"\n",
+    "add_item = \"\""
    ]
   },
   {
