--- a/Python Absolute Beginner/Module_1.2_Required_Code.ipynb
+++ b/Python Absolute Beginner/Module_1.2_Required_Code.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -34,26 +33,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the names of people you've met in the last 24 hours: Dan, Yuval, Chris, Emily\n",
+      "Have you met John? False\n",
+      "Have you met Dan? True\n",
+      "Have you met Tal? False\n",
+      "Have you met Yuval? True\n"
+     ]
+    }
+   ],
    "source": [
     "# Create name check code\n",
     "\n",
     "# [ ] get input for input_test variable\n",
-    "\n",
+    "input_test = input(\"Enter the names of people you've met in the last 24 hours: \")\n",
     "# [ ] print \"True\" message if \"John\" is in the input or False message if not\n",
-    "\n",
+    "print(\"Have you met John?\",\"John\" in input_test) \n",
     "\n",
     "# [ ] print True message if your name is in the input or False if not\n",
-    "\n",
+    "print(\"Have you met Dan?\",\"Dan\" in input_test)\n",
     "\n",
     "# [ ] Challenge: Check if another person's name is in the input - print message\n",
+    "print(\"Have you met Tal?\",\"Tal\" in input_test)\n",
     "\n",
-    "\n",
-    "# [ ] Challenge: Check if a fourth person's name is in the input - print message"
+    "# [ ] Challenge: Check if a fourth person's name is in the input - print message\n",
+    "print(\"Have you met Yuval?\",\"Yuval\" in input_test) "
    ]
   },
   {
@@ -66,7 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -80,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
