update to module 2

--- a/Python Absolute Beginner/Module_2.0_Tutorials_Functions.ipynb
+++ b/Python Absolute Beginner/Module_2.0_Tutorials_Functions.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -429,27 +429,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'words_to_yell' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21myell_this\u001b[39m():\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(words_to_yell)\n\u001b[0;32m----> 4\u001b[0m yell_this()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# [ ] get user input in variable words_to_yell\u001b[39;00m\n\u001b[1;32m      6\u001b[0m words_to_yell \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter words to yell: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[16], line 3\u001b[0m, in \u001b[0;36myell_this\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21myell_this\u001b[39m():\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(words_to_yell)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'words_to_yell' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter words to yell: ahhhhhhhhh\n",
+      "AHHHHHHHHH\n"
      ]
     }
    ],
    "source": [
     "# [ ] define yell_this() \n",
-    "def yell_this():\n",
-    "    print(words_to_yell)\n",
-    "yell_this()\n",
+    "def yell_this(phrase):\n",
+    "    print(words_to_yell.upper())\n",
     "# [ ] get user input in variable words_to_yell\n",
     "words_to_yell = input(\"Enter words to yell: \")\n",
     "# [ ] call yell_this function with words_to_yell as argument\n",
@@ -512,9 +507,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "let's go let's go let's go let's go\n"
+     ]
+    }
+   ],
    "source": [
     "# Message double returns the string Argument doubled\n",
     "def msg_double(phrase):\n",
@@ -523,14 +526,32 @@
     "\n",
     "# save return value in variable\n",
     "msg_2x = msg_double(\"let's go\")\n",
-    "print(msg_double(msg_2x))"
+    "print(msg_double(msg_2x))    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save Now! Save Now!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# example of functions with return values used in functions\n",
     "def msg_double(phrase):\n",
@@ -560,12 +581,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 59,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your full name: dan oren\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Dr.Dan Oren'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create and call make_doctor() with full_name argument from user input - then print the return value\n",
-    "\n"
+    "def make_doctor(full_name): \n",
+    "    name = \"Dr.\" + full_name.title()\n",
+    "    return name \n",
+    "\n",
+    "full_name = input(\"Enter your full name: \")\n",
+    "\n",
+    "make_doctor(full_name)"
    ]
   },
   {
@@ -594,9 +641,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCHEDULE: [1st] Mathematics, [2nd] History\n"
+     ]
+    }
+   ],
    "source": [
     "def make_schedule(period1, period2):\n",
     "    schedule = (\"[1st] \" + period1.title() + \", [2nd] \" + period2.title())\n",
@@ -625,13 +680,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCHEDULE: [1st]Mathematics, [2nd] History, [3rd] Sciene\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] add a 3rd period parameter to make_schedule\n",
     "# [ ] Optional - print a schedule for 6 classes (Tip: perhaps let the function make this easy)\n",
-    "\n"
+    "def make_schedule(period1, period2, period3):\n",
+    "    schedule = (\"[1st]\" + period1.title() + \", [2nd] \" + period2.title() + \", [3rd] \" + period3.title())\n",
+    "    return schedule \n",
+    "\n",
+    "student_schedule = make_schedule(\"mathematics\", \"history\", \"sciene\")\n",
+    "print(\"SCHEDULE:\", student_schedule)\n"
    ]
   },
   {
@@ -724,31 +792,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'hat_available' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-3d9867b7870b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# [ ] fix the sequence of the code to remove the NameError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mhave_hat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhat_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'green'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hat available is'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhave_hat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'hat_available' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hat available is True\n"
      ]
     }
    ],
    "source": [
     "# [ ] fix the sequence of the code to remove the NameError\n",
+    "def hat_available(color):\n",
+    "    hat_colors = 'black, red, blue, green, white, grey, brown, pink'\n",
+    "    return(color.lower() in hat_colors)\n",
     "\n",
     "have_hat = hat_available('green')  \n",
     "  \n",
     "print('hat available is', have_hat)\n",
     "\n",
-    "def hat_available(color):\n",
-    "    hat_colors = 'black, red, blue, green, white, grey, brown, pink'\n",
-    "    return(color.lower() in hat_colors)\n",
     "\n"
    ]
   },
@@ -786,18 +850,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input a bird name to check for availability: Sandpiper\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create function bird_available\n",
-    "\n",
+    "def bird_available(bird):\n",
+    "    bird_types = 'crow, robin, parrot, eagle, sandpiper, hawk, pigeon'\n",
+    "    return(bird.lower() in bird_types) \n",
     "# [ ] user input\n",
-    "\n",
+    "what_bird = input(\"Input a bird name to check for availability: \")\n",
     "# [ ] call bird_available\n",
-    "\n",
+    "have_bird = bird_available(what_bird)\n",
     "# [ ] print availbility status\n",
-    "\n"
+    "print(have_bird)\n"
    ]
   },
   {
@@ -813,12 +888,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter how many you want: 5\n",
+      "5 will be ordered\n"
+     ]
+    }
+   ],
    "source": [
     "# define function how_many\n",
-    "how_many():\n",
+    "def how_many():\n",
     "    requested = input(\"enter how many you want: \")\n",
     "    return requested\n",
     "\n",
