--- a/Python Absolute Beginner/Module_2.1_Practice.ipynb
+++ b/Python Absolute Beginner/Module_2.1_Practice.ipynb
@@ -24,21 +24,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the first verse: We were born and raised\n",
+      "Enter the second verse: in a summer haze \n",
+      "We were born and raised,in a summer haze \n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define and call a function short_rhyme() that prints a 2 line rhyme\n",
-    "\n"
+    "def short_rhyme(line_rhyme1, line_rhyme2):\n",
+    "    full_rhyme = (line_rhyme1 + \",\" + line_rhyme2)\n",
+    "    return full_rhyme \n",
+    "\n",
+    "what_rhyme1 = input(\"Enter the first verse: \")  \n",
+    "what_rhyme2 = input(\"Enter the second verse: \")\n",
+    "\n",
+    "final_rhyme = short_rhyme(what_rhyme1, what_rhyme2) \n",
+    "\n",
+    "print(final_rhyme)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] define (def) a simple function: title_it() and call the function\n",
+    "def title_it(msg): \n",
+    "    print(msg.title())\n",
+    "    \n",
     "# - has a string parameter: msg\n",
     "# - prints msg in Title Case\n",
     "\n"
@@ -46,24 +68,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the title? modern family \n",
+      "Modern Family \n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input with prompt \"what is the title?\" \n",
     "# [ ] call title_it() using input for the string argument\n",
-    "\n"
+    "title_name = input(\"What is the title? \")\n",
+    "title_it(title_name)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function title_it_rtn at 0x000001C86E3CB740>\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define title_it_rtn() which returns a titled string instead of printing\n",
     "# [ ] call title_it_rtn() using input for the string argumetnt and print the result\n",
-    "\n"
+    "def title_it_rtn(title):\n",
+    "    return \"\"\n"
    ]
   },
   {
@@ -82,12 +123,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of a book: lord of the rings\n",
+      "Enter the price of a book: 14.99\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "title_it_rtn() missing 1 required positional argument: 'title'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[32], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m book_entry \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the name of a book: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m price_entry \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the price of a book: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m Booksentence \u001b[38;5;241m=\u001b[39m bookstore(title_it_rtn())\n",
+      "\u001b[1;31mTypeError\u001b[0m: title_it_rtn() missing 1 required positional argument: 'title'"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create, call and test bookstore() function\n",
-    "\n"
+    "def bookstore(book, price):\n",
+    "    return (\"Title:\", book, \"costs\", price) \n",
+    "\n",
+    "book_entry = input(\"Enter the name of a book: \")\n",
+    "price_entry = input(\"Enter the price of a book: \")\n",
+    "\n",
+    "Booksentence = bookstore(title_it_rtn())"
    ]
   },
   {
@@ -133,7 +200,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
