update to master

--- a/Python Absolute Beginner/Module_1.2_Required_Code.ipynb
+++ b/Python Absolute Beginner/Module_1.2_Required_Code.ipynb
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the names of people you've met in the last 24 hours: Dan, Yuval, Chris, Emily\n",
+      "Enter the names of people you've met in the last 24 hours: Tal, Dan, Yuval, Richard\n",
       "Have you met John? False\n",
       "Have you met Dan? True\n",
-      "Have you met Tal? False\n",
+      "Have you met Tal? True\n",
       "Have you met Yuval? True\n"
      ]
     }
