--- a/Python Absolute Beginner/Module_2.2_Required_Code.ipynb
+++ b/Python Absolute Beginner/Module_2.2_Required_Code.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -26,11 +25,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your full name: dan oren\n",
+      "Enter the name of the fish: goldfish\n",
+      "Enter the price of the fish: 3.99\n",
+      "Report for Dan Oren. Fish Type: Goldfish costs $3.99\n"
+     ]
+    }
+   ],
    "source": [
-    "# [ ] create, call and test fishstore() function \n"
+    "# [ ] create, call and test fishstore() function \n",
+    "def fishstore(full_name, fish, price): \n",
+    "    return (\"Report for \" + full_name.title() + \". \" + \"Fish Type: \" + fish_entry.title() + \" costs \" + \"$\" + price_entry)\n",
+    "\n",
+    "full_name = input(\"Enter your full name: \")\n",
+    "fish_entry = input(\"Enter the name of the fish: \")\n",
+    "price_entry = input(\"Enter the price of the fish: \")\n",
+    "\n",
+    "fishstore_final = fishstore(full_name, fish_entry, price_entry)\n",
+    "\n",
+    "print(fishstore_final)"
    ]
   },
   {
@@ -43,7 +63,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -57,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
