--- a/Python Absolute Beginner/Module_2.1_Practice.ipynb
+++ b/Python Absolute Beginner/Module_2.1_Practice.ipynb
@@ -135,38 +135,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the name of a book: lord of the rings\n",
-      "Enter the price of a book: 14.99\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "title_it_rtn() missing 1 required positional argument: 'title'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m book_entry \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the name of a book: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m price_entry \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the price of a book: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m Booksentence \u001b[38;5;241m=\u001b[39m bookstore(title_it_rtn())\n",
-      "\u001b[1;31mTypeError\u001b[0m: title_it_rtn() missing 1 required positional argument: 'title'"
+      "Enter the name of a book: Lord of The Rings\n",
+      "Enter the price of a book: 14.99\n",
+      "Title: Lord of The Rings, costs 14.99\n"
      ]
     }
    ],
    "source": [
     "# [ ] create, call and test bookstore() function\n",
     "def bookstore(book, price):\n",
-    "    return (\"Title:\", book, \"costs\", price) \n",
+    "    return (\"Title: \" + book + \", costs \" + price) \n",
     "\n",
     "book_entry = input(\"Enter the name of a book: \")\n",
     "price_entry = input(\"Enter the price of a book: \")\n",
     "\n",
-    "Booksentence = bookstore(title_it_rtn())"
+    "booksentence = bookstore(book_entry, price_entry)\n",
+    "\n",
+    "print(booksentence )"
    ]
   },
   {
