--- a/Python Absolute Beginner/Module_3.1_Practice.ipynb
+++ b/Python Absolute Beginner/Module_3.1_Practice.ipynb
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input your age (use only whole numbers): 23\n",
+      "Input your age (use only whole numbers): 19\n",
       "Age's first type is:  <class 'int'>\n",
       "Age's second type is:  <class 'int'>\n",
-      "In ten years you will be 33.\n"
+      "In ten years you will be 29.\n"
      ]
     }
    ],
@@ -51,17 +51,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 4\n",
+      "4 greater than 100 is False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] input a number \n",
     "# if number IS a digit string then cast to int\n",
     "# print number \"greater than 100 is\" True/False\n",
     "# if number is NOT a digit string then message the user that \"only int is accepted\"\n",
+    "number = int(input(\"Enter a number: \"))\n",
     "\n",
+    "print(number,\"greater than 100 is\",number > 100)\n",
     "\n"
    ]
   },
@@ -78,28 +87,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 56,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] create check_guess()\n",
     "# call with test\n",
+    "def check_guess(letter, guess):\n",
+    "    letter = \"c\"\n",
+    "    guess = input(\"Enter a letter: \")\n",
+    "    if guess.isalpha == False: \n",
+    "        print(\"Invalid input: Please enter an alphabetical letter.\")\n",
+    "    else: \n",
+    "        pass \n",
+    "    if letter == guess: \n",
+    "        print(\"You got it right!\")\n",
+    "    elif guess == \"a\":\n",
+    "        print(\"Guess is too low\")  \n",
+    "    elif guess == \"b\":\n",
+    "        print(\"Guess is too low\")\n",
+    "    elif guess == \"d\":\n",
+    "        print(\"Guess is too high\")\n",
+    "    elif guess == \"e\":\n",
+    "        print(\"Guess is too high\")\n",
+    "    else: \n",
+    "        print(\"Not quite, guess again\")\n",
+    "    return \n",
     "\n",
+    "    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a letter: e\n",
+      "Guess is too high\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] call check_guess with user input\n",
-    "\n"
+    "check_guess(\"c\", \"enter a letter: \")\n"
    ]
   },
   {
@@ -327,7 +362,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
