Update to Module 2 required code
fixed the first and last name input to be hard coded in the code itself

--- a/Python Absolute Beginner/Module_2.2_Required_Code.ipynb
+++ b/Python Absolute Beginner/Module_2.2_Required_Code.ipynb
@@ -25,17 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your full name: dan oren\n",
-      "Enter the name of the fish: goldfish\n",
-      "Enter the price of the fish: 3.99\n",
-      "Report for Dan Oren. Fish Type: Goldfish costs $3.99\n"
+      "Enter the name of the fish: Goldfish\n",
+      "Enter the price of the fish: 6.99\n",
+      "Report for Dan Oren. Fish Type: Goldfish costs $6.99\n"
      ]
     }
    ],
@@ -44,7 +43,7 @@
     "def fishstore(full_name, fish, price): \n",
     "    return (\"Report for \" + full_name.title() + \". \" + \"Fish Type: \" + fish_entry.title() + \" costs \" + \"$\" + price_entry)\n",
     "\n",
-    "full_name = input(\"Enter your full name: \")\n",
+    "full_name = \"Dan Oren\"\n",
     "fish_entry = input(\"Enter the name of the fish: \")\n",
     "price_entry = input(\"Enter the price of the fish: \")\n",
     "\n",
