--- a/Python Absolute Beginner/Module_3.0_Tutorials_Conditionals.ipynb
+++ b/Python Absolute Beginner/Module_3.0_Tutorials_Conditionals.ipynb
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True means do something\n"
+     ]
+    }
+   ],
    "source": [
     "if True:\n",
     "    print(\"True means do something\")\n",
@@ -57,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enjoy some hot tea!\n"
+     ]
+    }
+   ],
    "source": [
     "hot_tea = True\n",
     "\n",
@@ -1271,7 +1287,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1285,7 +1301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
