--- a/Python Absolute Beginner/Module_3.1_Practice.ipynb
+++ b/Python Absolute Beginner/Module_3.1_Practice.ipynb
@@ -181,14 +181,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a sentence about a pet: I love my dog so much!\n",
+      "I love dogs!\n",
+      "Thank you for sharing that story.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete pet conversation\n",
-    "\n"
+    "about_pet = input(\"Enter a sentence about a pet: \")\n",
+    "if \"dog\" in about_pet:\n",
+    "    print(\"I love dogs!\")\n",
+    "elif \"cat\" in about_pet:\n",
+    "    print(\"Ah, a cat\")\n",
+    "elif \"fish\" in about_pet:\n",
+    "    print(\"I hate fish to be honest\")\n",
+    "\n",
+    "print(\"Thank you for sharing that story.\")\n",
+    "    \n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -292,7 +311,8 @@
    "outputs": [],
    "source": [
     "# [ ]  create rainbow_or_age()\n",
-    "\n"
+    "rainbow_or_age():\n",
+    "    \n"
    ]
   },
   {
