update to the master

--- a/Python Absolute Beginner/Module_3.1_Practice.ipynb
+++ b/Python Absolute Beginner/Module_3.1_Practice.ipynb
@@ -51,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number: 4\n",
-      "4 greater than 100 is False\n"
+      "Enter a number: four\n",
+      "invalid input, please try again with an integer\n"
      ]
     }
    ],
@@ -68,9 +68,11 @@
     "# if number IS a digit string then cast to int\n",
     "# print number \"greater than 100 is\" True/False\n",
     "# if number is NOT a digit string then message the user that \"only int is accepted\"\n",
-    "number = int(input(\"Enter a number: \"))\n",
-    "\n",
-    "print(number,\"greater than 100 is\",number > 100)\n",
+    "number = input(\"Enter a number: \")\n",
+    "if number.isalpha():\n",
+    "    print(\"invalid input, please try again with an integer\")\n",
+    "else:\n",
+    "    print(int(number),\"greater than 100 is\",int(number) > 100)\n",
     "\n"
    ]
   },
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,19 +98,17 @@
     "def check_guess(letter, guess):\n",
     "    letter = \"c\"\n",
     "    guess = input(\"Enter a letter: \")\n",
-    "    if guess.isalpha == False: \n",
+    "    if guess.isalpha() == False: \n",
     "        print(\"Invalid input: Please enter an alphabetical letter.\")\n",
-    "    else: \n",
-    "        pass \n",
-    "    if letter == guess: \n",
+    "    elif letter.lower() == guess: \n",
     "        print(\"You got it right!\")\n",
-    "    elif guess == \"a\":\n",
+    "    elif guess.lower() == \"a\":\n",
     "        print(\"Guess is too low\")  \n",
-    "    elif guess == \"b\":\n",
+    "    elif guess.lower() == \"b\":\n",
     "        print(\"Guess is too low\")\n",
-    "    elif guess == \"d\":\n",
+    "    elif guess.lower() == \"d\":\n",
     "        print(\"Guess is too high\")\n",
-    "    elif guess == \"e\":\n",
+    "    elif guess.lower() == \"e\":\n",
     "        print(\"Guess is too high\")\n",
     "    else: \n",
     "        print(\"Not quite, guess again\")\n",
@@ -120,15 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a letter: e\n",
-      "Guess is too high\n"
+      "Enter a letter: c\n",
+      "You got it right!\n"
      ]
     }
    ],
@@ -252,25 +252,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your favorite color from the rainbow? (ROYGBIV): g\n",
+      "Green\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete rainbow colors\n",
-    "\n",
-    "\n"
+    "fav_color = input(\"What is your favorite color from the rainbow? (ROYGBIV): \")\n",
+    "if fav_color.upper() == \"R\":\n",
+    "    print(\"Red\")\n",
+    "elif fav_color.upper() == \"O\":\n",
+    "    print(\"Orange\")\n",
+    "elif fav_color.upper() == \"Y\":\n",
+    "    print(\"Yellow\")\n",
+    "elif fav_color.upper() == \"G\":\n",
+    "    print(\"Green\")\n",
+    "elif fav_color.upper() == \"B\":\n",
+    "    print(\"Blue\")\n",
+    "elif fav_color.upper() == \"I\":\n",
+    "    print(\"Indigo\")\n",
+    "elif fav_color.upper() == \"V\":\n",
+    "    print(\"Violet\")\n",
+    "else:\n",
+    "    print(\"No match\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your favorite color from the rainbow? (ROYGBIV): b\n",
+      "Blue\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] make the code above into a function rainbow_color() that has a string parameter, \n",
     "# get input and call the function and return the matching color as a string or \"no match\" message.\n",
     "# Call the function and print the return string.\n",
-    "\n"
+    "def rainbow_color(fav_color):\n",
+    "    fav_color = input(\"What is your favorite color from the rainbow? (ROYGBIV): \")\n",
+    "    if fav_color.upper() == \"R\":\n",
+    "        print(\"Red\")\n",
+    "    elif fav_color.upper() == \"O\":\n",
+    "        print(\"Orange\")\n",
+    "    elif fav_color.upper() == \"Y\":\n",
+    "        print(\"Yellow\")\n",
+    "    elif fav_color.upper() == \"G\":\n",
+    "        print(\"Green\")\n",
+    "    elif fav_color.upper() == \"B\":\n",
+    "        print(\"Blue\")\n",
+    "    elif fav_color.upper() == \"I\":\n",
+    "        print(\"Indigo\")\n",
+    "    elif fav_color.upper() == \"V\":\n",
+    "        print(\"Violet\")\n",
+    "    else:\n",
+    "        print(\"No match\")\n",
+    "    return\n",
+    "rainbow_color(fav_color)"
    ]
   },
   {
