--- a/Python Absolute Beginner/Module_3.1_Practice.ipynb
+++ b/Python Absolute Beginner/Module_3.1_Practice.ipynb
@@ -51,15 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number: 4\n",
-      "4 greater than 100 is False\n"
+      "Enter a number: h\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'h'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Input: Only int is accepted, please try again\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \n\u001b[1;32m----> 9\u001b[0m     \u001b[38;5;28mint\u001b[39m(number)\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(number,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreater than 100 is\u001b[39m\u001b[38;5;124m\"\u001b[39m,number \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m100\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'h'"
      ]
     }
    ],
@@ -68,8 +78,12 @@
     "# if number IS a digit string then cast to int\n",
     "# print number \"greater than 100 is\" True/False\n",
     "# if number is NOT a digit string then message the user that \"only int is accepted\"\n",
-    "number = int(input(\"Enter a number: \"))\n",
-    "\n",
+    "number = input(\"Enter a number: \")\n",
+    "if number.isdigit == False:\n",
+    "    print(\"Invalid Input: Only int is accepted, please try again\")\n",
+    "else: \n",
+    "    int(number)\n",
+    "    pass\n",
     "print(number,\"greater than 100 is\",number > 100)\n",
     "\n"
    ]
