--- a/Python Absolute Beginner/Module_3.2_Required_Code.ipynb
+++ b/Python Absolute Beginner/Module_3.2_Required_Code.ipynb
@@ -47,12 +47,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How much cheese would you like to order? 27\n",
+      "Dan Oren, enter cheese order weight: 27\n",
+      "27 costs $135\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create fucntion, call and test \n",
-    "def chees_order(maximum, minimum, price, order_amount)"
+    "def cheese_order(order_amount, maximum = 100, minimum = 10, price = 5):\n",
+    "    full_name = \"Dan Oren,\"\n",
+    "    order_amount = int(input(\"How much cheese would you like to order? \"))\n",
+    "    if order_amount > maximum:\n",
+    "        print(full_name,\"enter cheese order weight:\",order_amount)\n",
+    "        print(order_amount,\"is more than currently available stock, please try again.\")\n",
+    "    elif order_amount < minimum:\n",
+    "        print(full_name,\"enter cheese order weight:\",order_amount)\n",
+    "        print(order_amount,\"is below minimum order amount, please try again.\")\n",
+    "    else:\n",
+    "        final_price = str(order_amount*price)\n",
+    "        print(full_name,\"enter cheese order weight:\",order_amount)\n",
+    "        print(order_amount,\"costs \" + \"$\" + final_price) \n",
+    "    return \n",
+    "\n",
+    "    \n",
+    "cheese_order(\"How much cheese would you like to order? \")\n"
    ]
   },
   {
@@ -61,6 +87,13 @@
    "source": [
     "Submit this by creating a python file (.py) and submitting it in D2L. Be sure to test that it works."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
