--- a/Python Absolute Beginner/Module_3.1_Practice.ipynb
+++ b/Python Absolute Beginner/Module_3.1_Practice.ipynb
@@ -338,12 +338,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How old are you?: 25\n",
+      "5 years old, 20 years difference from now.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete age_20()\n",
-    "\n"
+    "def age_20(ask_age):\n",
+    "    ask_age = int(input(\"How old are you?: \"))\n",
+    "    if ask_age >= 21:\n",
+    "        subtracted_age = ask_age - 20\n",
+    "        print(subtracted_age,\"years old, 20 years difference from now.\")\n",
+    "    elif ask_age <= 20:\n",
+    "        added_age = ask_age + 20\n",
+    "        print(added_age,\"years old, 20 years difference from now.\")\n",
+    "    return\n",
+    "age_20(\"How old are you?: \")\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -358,66 +378,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a color or number: 65\n",
+      "How old are you?: 65\n",
+      "45 years old, 20 years difference from now.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  create rainbow_or_age()\n",
-    "rainbow_or_age():\n",
+    "def rainbow_or_age(arguement):\n",
+    "    argument = input(\"Enter a color or number: \")\n",
+    "    if argument.isdigit() == True:\n",
+    "        return age_20(argument)\n",
+    "    elif argument.isalpha == True:\n",
+    "        return rainbow_color(argument)\n",
+    "    else:\n",
+    "        return(\"False\")\n",
+    "rainbow_or_age(\"Enter a color or number: \")\n",
+    "    \n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 1\n",
+      "Enter another number: 2\n",
+      "1 + 2 = 3\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  add 2 numbers from input using a cast to integer and display the answer \n",
-    "\n"
+    "input_1 = int(input(\"Enter a number: \"))\n",
+    "input_2 = int(input(\"Enter another number: \"))\n",
+    "\n",
+    "final_answer = input_1 + input_2\n",
+    "print(input_1, \"+\", input_2, \"=\", final_answer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 9\n",
+      "Enter another number: 3\n",
+      "The answer is... 27\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Multiply 2 numbers from input using cast and save the answer as part of a string \"the answer is...\"\n",
     "# display the string using print\n",
+    "input_1 = int(input(\"Enter a number: \"))\n",
+    "input_2 = int(input(\"Enter another number: \"))\n",
+    "final_answer = input_1*input_2\n",
+    "print(\"The answer is...\",final_answer)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 5\n",
+      "Enter another number: 7\n",
+      "The average is... 6.0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get input of 2 numbers and display the average: (num1 + num2) divided by 2\n",
-    "\n"
+    "input_1 = int(input(\"Enter a number: \"))\n",
+    "input_2 = int(input(\"Enter another number: \"))\n",
+    "final_answer = (input_1 + input_2)/2\n",
+    "print(\"The average is...\",final_answer)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 1\n",
+      "Enter another number: 90\n",
+      "The answer is... 89\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get input of 2 numbers and subtract the largest from the smallest (use an if statement to see which is larger)\n",
     "# show the answer\n",
+    "input_1 = int(input(\"Enter a number: \"))\n",
+    "input_2 = int(input(\"Enter another number: \"))\n",
+    "if input_1 > input_2: \n",
+    "    final_answer1 = input_1 - input_2\n",
+    "    print(\"The answer is...\",final_answer1)\n",
+    "if input_1 < input_2: \n",
+    "    final_answer2 = input_2 - input_1\n",
+    "    print(\"The answer is...\",final_answer2)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 65\n",
+      "Enter another number: 23\n",
+      "The answer is... 2\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Divide a larger number by a smaller number and print the integer part of the result\n",
     "# don't divide by zero! if a zero is input make the result zero\n",
     "# [ ] cast the answer to an integer to cut off the decimals and print the result\n",
+    "input_1 = int(input(\"Enter a number: \"))\n",
+    "input_2 = int(input(\"Enter another number: \"))\n",
+    "if input_1 > input_2: \n",
+    "    final_answer1 = input_1/input_2\n",
+    "    print(\"The answer is...\",int(final_answer1))\n",
+    "elif input_1 < input_2: \n",
+    "    final_answer2 = input_2/input_1\n",
+    "    print(\"The answer is...\",int(final_answer2))\n",
+    "\n",
     "\n"
    ]
   },
