--- a/Python Absolute Beginner/Module_4.0_Tutorials_Nested_Conditionals.ipynb
+++ b/Python Absolute Beginner/Module_4.0_Tutorials_Nested_Conditionals.ipynb
@@ -42,9 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"c\" for Cheese or \"v\" for Veggie Special: c\n",
+      "\"c\" for Cheddar or \"m\" for Manchego: y\n",
+      "Sorry, we only have Cheddar and Manchego cheese\n"
+     ]
+    }
+   ],
    "source": [
     "# simplified example\n",
     "# [ ] review the code then run and following the flowchart paths\n",
@@ -59,8 +69,10 @@
     "    \n",
     "    if cheese_type.lower() == \"c\":\n",
     "        print(\"Here is your Cheddar Cheese sandwich\")\n",
+    "    elif cheese_type.lower() == \"m\":\n",
+    "        print(\"Here is your Manchego Cheese sandwhich\")\n",
     "    else:\n",
-    "        print(\"Here is your Manchego Cheese sandwich\") \n",
+    "        print(\"Sorry, we only have Cheddar and Manchego cheese\") \n",
     "elif sandwich_type.lower() == \"v\":\n",
     "    print(\"Here is your Veggie Special\")\n",
     "else:\n",
@@ -69,9 +81,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, welcome to the sandwich shop.  Please select a sandwich.\n",
+      "\"c\" for Cheese or \"v\" for Veggie Special: c\n",
+      "\n",
+      "Please select a cheese.\n",
+      "\"c\" for Cheddar or \"m\" for Manchego: m\n",
+      "\n",
+      "Here is your Manchego Cheese sandwich.  Thank you.\n",
+      "\n",
+      "Goodbye!\n"
+     ]
+    }
+   ],
    "source": [
     "# full example: handling some invalid input and elif statement\n",
     "# [ ] review the code then run following the flowchart paths including **invalid responses** like \"xyz123\"\n",
@@ -119,13 +147,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is it morning? (Enter y or n): n\n",
+      "Is it evening? (Enter y or n): n\n",
+      "Hello!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Say \"Hello\" with nested if\n",
     "# [ ] Challenge: handle input other than y/n\n",
-    "\n"
+    "morning = input('Is it morning? (Enter y or n): ')\n",
+    "if morning.lower() == \"y\": \n",
+    "    print(\"Good morning, and in case I don't see ya, good afternoon, good evening, and good night!\")\n",
+    "elif morning.lower() == \"n\": \n",
+    "    evening = input(\"Is it evening? (Enter y or n): \")\n",
+    "    if evening.lower() == \"y\":\n",
+    "        print(\"Good evening, how was your day?\")\n",
+    "    elif evening.lower() == \"n\":\n",
+    "        print(\"Hello!\")\n",
+    "    else:\n",
+    "        print(\"Answer only with y/n.\")\n",
+    "else: \n",
+    "    print(\"Answer only with y/n.\")\n"
    ]
   },
   {
@@ -145,11 +195,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess a bird i'm thinking of: hawk\n",
+      "Sorry, thats not one of the birds, try again: hawk again?\n",
+      "Sorry, thats not one of the birds, try one last time: dove\n",
+      "Correct! You got one on the last try!\n"
+     ]
+    }
+   ],
    "source": [
-    "# [ ] Create the \"Guess the bird\" program \n"
+    "# [ ] Create the \"Guess the bird\" program \n",
+    "bird_names = \"pigeon, dove, raven, bluebird\"\n",
+    "bird_guess = input(\"Guess a bird i'm thinking of: \")\n",
+    "if bird_guess.lower() in bird_names:\n",
+    "    print(\"Correct! You got one on the first try!\") \n",
+    "else:\n",
+    "    bird_guess2 = input(\"Sorry, thats not one of the birds, try again: \")\n",
+    "    if bird_guess2.lower() in bird_names: \n",
+    "        print(\"Correct! You got it on the second try!\") \n",
+    "    else:\n",
+    "        bird_guess3 = input(\"Sorry, thats not one of the birds, try one last time: \")\n",
+    "        if bird_guess3.lower() in birds: \n",
+    "            print(\"Correct! You got it on the last try!\") \n",
+    "        else:\n",
+    "            print(\"Sorry! No luck today.\")\n"
    ]
   },
   {
@@ -202,9 +277,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "I am formatting print \n"
+     ]
+    }
+   ],
    "source": [
     "# review and run example using \\n (new line)\n",
     "print('Hello World!\\nI am formatting print ')"
@@ -212,9 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STUDENT NAME\t\tAGE\n",
+      "Hiroto Yamaguchi \t17\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code using \\t (tab)\n",
     "student_age = 17\n",
@@ -225,9 +318,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"quotes in quotes\"\n",
+      "I've said \"save your notebook,\" so let's do it!\n",
+      "for a newline use \\n\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code \n",
     "# using \\\" and \\' (escaped quotes)\n",
@@ -249,35 +352,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"\\\\\\WARNING!///\"\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print \"\\\\\\WARNING!///\"\n",
-    "\n",
+    "print('\"\\\\\\\\\\WARNING!///\"')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"What's that?\" isn't a specific question.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print output that is exactly (with quotes): \"What's that?\" isn't a specific question.\n",
-    "\n"
+    "print(\"\\\"What's that?\\\" isn't a specific question.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One\tTwo\tThree\n",
+      "Four\tFive\tSix\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] from 1 print statement output the text commented below using no spaces\n",
     "# One     Two     Three\n",
     "# Four    Five    Six\n",
-    "\n"
+    "print(\"One\\tTwo\\tThree\\nFour\\tFive\\tSix\")\n"
    ]
   },
   {
@@ -301,12 +429,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You need to print a valid \"pre\" word: pregame\n",
+      "Nice!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and test pre_word()\n",
-    "\n"
+    "def pre_word(test_word):\n",
+    "    if test_word.startswith(\"pre\"): \n",
+    "        if test_word.isalpha():\n",
+    "            return True \n",
+    "        else: \n",
+    "            return False \n",
+    "    else: \n",
+    "        return False \n",
+    "result = pre_word(input('You need to print a valid \"pre\" word: '))\n",
+    "if result:\n",
+    "    print(\"Nice!\")\n",
+    "else: \n",
+    "    print(\"Please input a valid \\\"pre\\\" word.\")\n",
+    "    \n"
    ]
   },
   {
@@ -327,12 +477,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "World!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review, run, fix\n",
-    "print(\"Hello/nWorld!)\n",
+    "print(\"Hello\\nWorld!\")\n",
     "\n"
    ]
   },
@@ -384,25 +543,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "write forever, unless there is a \"break\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Review and run code\n",
     "# this example never loops because the break has no conditions\n",
     "while True:\n",
     "    print('write forever, unless there is a \"break\"')\n",
-    "    break"
+    "    break "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "guess the number 1 to 5: 1\n",
+      "1 is incorrect\n",
+      "\n",
+      "guess the number 1 to 5: 2\n",
+      "2 is incorrect\n",
+      "\n",
+      "guess the number 1 to 5: 3\n",
+      "3 is incorrect\n",
+      "\n",
+      "guess the number 1 to 5: 4\n",
+      "4 is incorrect\n",
+      "\n",
+      "guess the number 1 to 5: 5\n",
+      "Yes 5 is correct!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the NUMBER GUESS code then run - Q. what cause the break statement to run?\n",
-    "number_guess = \"0\"\n",
     "secret_number = \"5\"\n",
     "\n",
     "while True:\n",
@@ -416,9 +604,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter weather (sunny, rainy, snowy, or quit): q\n",
+      "\n",
+      "\"quit\" detected, exiting\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review WHAT TO WEAR code then run testing different inputs\n",
     "while True:\n",
@@ -458,12 +656,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a familiar name: \n",
+      "What a lovely name , it's nice to meet you!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create Get Name program\n",
-    "\n"
+    "familiar_name = \"\"\n",
+    "while True: \n",
+    "    familiar_name = input(\"Enter a familiar name: \")\n",
+    "    if familiar_name.lower() == \"\":\n",
+    "        print(\"What a lovely name\",familiar_name + \", it's nice to meet you!\")\n",
+    "        break \n"
    ]
   },
   {
@@ -811,7 +1023,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -825,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
